Issue 9021304 remove unnecessary white space

--- a/webapp/static/css/style.css
+++ b/webapp/static/css/style.css
@@ -237,7 +237,7 @@ input::-webkit-inner-spin-button {
 }
 
 #locations_map {
-    margin-bottom: 75px;
+    margin-bottom: -15px;
     border: 1px solid #d4d4d4;
 }
 
